--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
+    "framer-motion": "^7.8.1",
+    "nprogress": "^0.2.0",
     "postcss": "^8.4.20",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.8.3",
@@ -44,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.2",
     "prettier": "2.8.1"
