--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
     "framer-motion": "^7.8.1",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.20",
     "postcss-cli": "^9.1.0",
     "postcss-preset-env": "^7.8.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
